--- a/Event/Event-page/style.css
+++ b/Event/Event-page/style.css
@@ -106,8 +106,8 @@
   /* ------------------------------------------------------------------------------------------- */
 
   .event{
-    padding-right: 5%;
-    padding-left: 5%;
+    padding-right: 2%;
+    padding-left: 2%;
   }
 
   .event h2{
@@ -118,16 +118,22 @@
   }
   
   #iklan{
-    width: 1090px;
-    height: 289px;
+    max-width: 100%; 
+    max-height: 80%;
     margin-top: 8%;
+    margin-left: 2%;
+    margin-right: 2%;
+  }
+
+  .event ::-webkit-scrollbar{
+    width: 0px;
   }
 
   .sertifikasi{
     display: flex;
+    overflow-x: scroll;
     gap: 1.5%;
     margin-top: 1%;
-
   }
 
   .sertifikasi img{
@@ -137,8 +143,9 @@
 
   .webinar{
     display: flex;
+    overflow-x: scroll;
     gap: 1.5%;
-    margin-top: 1%;
+    margin-top: 0.5%;
 
   }
 
@@ -150,8 +157,9 @@
 
   .seminar{
     display: flex;
+    overflow-x: scroll;
     gap: 1.5%;
-    margin-top: 1%;
+    margin-top: 0.5%;
 
   }
 
