--- a/Profil/Profil/style.css
+++ b/Profil/Profil/style.css
@@ -110,73 +110,85 @@ body {
   width: 4.5%;
   height: 9%;
   margin-left: 5%;
+  box-shadow: 0 5px 15px #d0d9e0; 
+  border-radius: 100px;
+  cursor: pointer;
 }
 
-.room-profil{
-  margin-top: 5sem;
+.room-profil {
+  margin: 6em auto;
   margin-bottom: 2em;
-  margin-left: 18em;
-  margin-right: 18em;
+  margin-top: 4.5em;
   border: 2px solid whitesmoke;
   border-radius: 12px;
   background-color: #89939E;
-  width: 55%;
-  height: 36em;
-  padding-left: 8%;
-  padding-top: 2.5%;
+  padding: 2.5%;
+  width: 32%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.room-profil input{
+.data input {
   border-radius: 8px;
-  margin-top: 1%;
-  margin-bottom: 3%;
-  width: 82%;
-  height: 5%;
-  padding-left: 2%;
-  padding-top: 2.5%;
-  padding-bottom: 2.5%;
-  font-size: 1rem;
+  margin-top: 2%;
+  margin-bottom: 4%;
+  width: 18.5em;
+  height: 1.6em;
+  font-size: 1.1rem;
   font-family: "Lato", sans-serif;
+  text-align: left; 
+  padding-left: 0.8em;
+  padding-right: 0.8em;
 }
 
-.room-profil label{
+.data label {
   color: #FFFFFF;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-family: "Lato", sans-serif;
+  text-align: left; 
 }
 
-.room-profil button{
-  margin-top: 4.5%;
-  margin-left: 2em;
+#button-edit {
+  margin-top: 2.5em;
   border-radius: 12px;
-  width: 70%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+  width: 12em;
+  height: 2em;
   background-color: #07689F;
   color: #FFFFFF;
   font-size: 1.1rem;
   font-family: "Lato", sans-serif;
+  box-shadow: 0 5px 15px #5e6163;
+  cursor: pointer;
 }
 
-
-#button-logout{
-  padding-left: 4%;
-  padding-right: 4%;
-  padding-top: 1%;
-  padding-bottom: 1%;
+#button-logout {
+  width: 10em;
+  height: 3em;
   border-radius: 12px;
-  margin-left: 66%;
+  margin-left: 54%;
   background-color: #EB5757;
   color: #FFFFFF;
   font-size: 1rem;
   font-family: "Lato", sans-serif;
+  box-shadow: 0 5px 15px #d0d9e0;
+  cursor: pointer;
 }
 
-
-
-
-/* ------------------------------------------------------------------------------------------- */
-
+#notifikasi {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #25AE60;
+  padding: 30px 40px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  font-size: 1.1rem;
+  font-family: "Lato", sans-serif;
+}
 
 footer {
   background-color: var(--primary);
@@ -206,3 +218,149 @@ footer .copyright p {
   color: var(--other);
   font-weight: 700;
 }
+
+
+@media screen and (max-width: 1075px){
+  .room-profil {
+    width: 35%;
+  }
+  .data label {
+    font-size: 1rem;
+  }
+  .data input {
+    margin-top: 2%;
+    margin-bottom: 5%;
+    width: 18.4em;
+    height: 1.5em;
+    font-size: 1rem;
+  }
+  #button-edit {
+    margin-top: 2.3em;
+    font-size: 1rem;
+  }
+  #button-logout {
+    width: 8em;
+    height: 3em;
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 1025px){
+  .room-profil {
+    width: 36%;
+  }
+  #icon-back{
+    width: 5%;
+  }
+}
+
+@media screen and (max-width: 880px){
+  .room-profil {
+    width: 41%;
+  }
+  #icon-back{
+    width: 6%;
+  }
+  #button-logout {
+    margin-left: 55%;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .room-profil {
+    width: 46%;
+  }
+  #icon-back{
+    width: 7%;
+  }
+  #button-logout {
+    margin-left: 56%;
+  }
+}
+
+@media screen and (max-width: 675px){
+  .room-profil {
+    width: 51%;
+  }
+  #icon-back{
+    width: 8%;
+  }
+}
+
+@media screen and (max-width: 625px){
+  .room-profil {
+    margin-top: 6em;
+    width: 55%;
+  }
+  #button-edit {
+    margin-top: 1.5em;
+  }
+  #icon-back{
+    height: 9.5%;
+    width: 8.5%;
+  }
+}
+
+@media screen and (max-width: 551px){
+  .room-profil {
+    width: 65%;
+    padding-top: 1em;
+  }
+  #icon-back{
+    width: 10.5%;
+  }
+  #button-logout {
+    margin-left: 57%;
+  }
+}
+
+@media screen and (width: 445px){
+  .room-profil {
+    width: 76%;
+    margin-top: 8.5em;
+  }
+  #icon-back{
+    height: 10%;
+    width: 12.5%;
+    margin-top: -2.5em;
+  }
+}
+
+@media screen and (max-width: 444px){
+  .room-profil {
+    width: 77%;
+    margin-top: 9.5em;
+    height: 31em;
+  }
+  #icon-back{
+    width: 12.5%;
+    margin-top: -2.3em;
+  }
+  #button-logout {
+    margin-left: 58%;
+  }
+}
+
+@media screen and (max-width: 360px){
+  .room-profil {
+    width: 95%;
+    margin-top: 1em;
+  }
+  #icon-back{
+    width: 16%;
+    margin-top: 7.5em;
+    position: relative;
+  }
+  #notifikasi {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 350px) {
+  #icon-back{
+    margin-top: 8.2em;
+  }
+  
+}
+
+
