--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
   height: 20px;
 }
 
-.cart-box {
+/* .cart-box {
   border: solid 1px black;
   padding: 10px 20px;
   position: absolute;
@@ -151,7 +151,7 @@ body {
   color: black;
   margin: 10px auto;
   padding: 10px 15px;
-}
+} */
 
 .profile {
   width: 20px;
