--- a/css/style-payment.css
+++ b/css/style-payment.css
@@ -1,4 +1,18 @@
-.payment {
+@import url('https://fonts.googleapis.com/css?family=Baloo+Bhaijaan|Ubuntu');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Ubuntu', sans-serif;
+}
+
+body{
+  background: #3282b8;
+  margin: 0 10px;
+}
+
+.payment{
   background: #f8f8f8;
   max-width: 360px;
   margin: 80px auto;
@@ -9,20 +23,20 @@
   position: relative;
 }
 
-.payment h2 {
+.payment h2{
   text-align: center;
   letter-spacing: 2px;
   margin-bottom: 40px;
   color: #0d3c61;
 }
 
-.form .label {
+.form .label{
   display: block;
   color: #555555;
   margin-bottom: 6px;
 }
 
-.input {
+.input{
   padding: 13px 0px 13px 25px;
   width: 100%;
   text-align: center;
@@ -35,25 +49,25 @@
   color: #555555;
 }
 
-.card-grp {
+.card-grp{
   display: flex;
   justify-content: space-between;
 }
 
-.card-item {
+.card-item{
   width: 48%;
 }
 
-.space {
+.space{
   margin-bottom: 20px;
 }
 
-.icon-relative {
+.icon-relative{
   position: relative;
 }
 
 .icon-relative .fas,
-.icon-relative .far {
+.icon-relative .far{
   position: absolute;
   bottom: 12px;
   left: 15px;
@@ -61,25 +75,28 @@
   color: #555555;
 }
 
-.btn {
+.btn{
   margin-top: 40px;
-  background: #2196f3;
+  background: #0f4c75;
   padding: 12px;
+  width: 18rem;
   text-align: center;
   color: #f8f8f8;
   border-radius: 5px;
   cursor: pointer;
 }
 
-@media screen and (max-width: 420px) {
-  .card-grp {
+
+
+@media screen and (max-width: 420px){
+  .card-grp{
     flex-direction: column;
   }
-  .card-item {
+  .card-item{
     width: 100%;
     margin-bottom: 20px;
   }
-  .btn {
+  .btn{
     margin-top: 20px;
   }
 }
